Attempt to stop buttons wrapping on mobile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -153,6 +153,11 @@ aside {
 
 #sign_in_up_buttons {
   float: right;
+  .btn {
+    margin: 0;
+    display: inline-block;
+    float: none;
+  }
 }
 
 /* forms */
